change brand font

--- a/about/about.css
+++ b/about/about.css
@@ -1,13 +1,22 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap');
+
+/*pc*/
+@media (max-width: 992px) {}
+/*tablet*/
+@media (min-width: 768px) and (max-width: 991px) {}
+/*mobile*/
+@media (max-width: 767px) {}
 
 :root {
+  --main-font: 'IBM Plex Sans KR', sans-serif;
+
   /* Main Color */
   --color-main: #0f52ba;
 
   /* Sub Colors */
   --color-sub1: #ff6666;
   --color-sub2: #157772;
-
   /* Additional Colors */
   --color-main-brighter3: #eef9ff;
   --color-main-brighter2: #c7e6ff;
@@ -34,6 +43,15 @@
   --color-gray-darker1: #555f61;
   --color-gray-darker2: #373d3f;
   --color-gray-darker3: #131516;
+}
+
+body {
+  font-family: var(--main-font);
+}
+
+.font-text{
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: bold;
 }
 
 div {
