--- a/about/about.css
+++ b/about/about.css
@@ -1,18 +1,12 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap');
 
-/*pc*/
-@media (max-width: 992px) {}
 
-/*tablet*/
-@media (min-width: 768px) and (max-width: 991px) {}
-
-/*mobile*/
-@media (max-width: 767px) {}
 
 :root {
   --main-font: 'IBM Plex Sans KR', sans-serif;
 
+  --width-max: 720px;
   /* Main Color */
   --color-main: #0f52ba;
 
@@ -48,7 +42,7 @@
 }
 
 div {
- /* border: solid var(--color-gray-brighter1) 1px;*/
+  border: solid var(--color-gray-brighter1) 1px;
   box-sizing: border-box;
 }
 
@@ -57,23 +51,103 @@ body {
   margin: 0;
 }
 
-.context-box {
-  width: 100%;
-  max-width: 700px;
+.content {
+  max-width: var(--width-max);
   margin: 0 auto;
+  padding: 5% 0;
+  z-index: 3;
+  position: relative;
 }
 
 .page-wrap {
+  position: relative;
   min-height: 100%;
-  padding: 200px 0 0 0;
+  padding: 130px 0 0 0;
+  box-sizing: border-box;
+  background-image: url(img/page-background.png);
+  background-repeat: no-repeat;
+  background-position: top center;
+  z-index: -1;
 }
 
-.nav-bar {
+.content-box-1,
+.content-box-2,
+.content-box-3,
+.content-box-4,
+.content-box-5 {
+  /* background-size: cover;*/
+  /* background-position: center;*/
   width: 100%;
+  margin: 100px 0;
+  position: relative;
+  z-index: 2;
+  font-size: inherit;
+}
+
+.content-box-1::before,
+.content-box-2::before,
+.content-box-3::before,
+.content-box-4::before,
+.content-box-5::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.3);
+  /* 반투명 흰색 배경 */
+  backdrop-filter: blur(10px);
+  /* 블러 효과 */
+  z-index: -1;
+}
+
+.content-box-1 {
+  background-color: #ffffff50;
+  font-size: 1.5em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.text-and-image {
+  display: flex;
+  align-items: center; 
+}
+
+.text-and-image p {
+  flex: 1.3;
   margin: 0;
+  padding: 0 20px 0 0;
+}
+
+.text-and-image img {
+  flex: 1;
+}
+
+.content-box-1 h1 {
+  font-size: 60px;
+  margin: 20px 0;
+  text-align: center;
+  text-decoration: double;
+}
+
+.content-box-1 strong {
+  color: var(--color-main);
+  text-shadow:
+    -1px -1px 0 var(--color-main-brighter),
+    1px -1px 0 var(--color-main-brighter),
+    -1px 1px 0 var(--color-main-brighter),
+    1px 1px 0 var(--color-main-brighter);
+}
+
+
+.nav-bar {
+  border-radius: 20px;
   position: fixed;
+  inset: 25px 25px auto 25px;
   background-color: var(--color-main);
-  box-shadow: var(--color-gray-brighter3) 0 1px 10px 10px;
+  box-shadow: #00000020 0 1px 15px 5px;
   /*수평 수직 흐림  번짐  그림자색상 */
   display: flex;
   justify-content: space-between;
@@ -82,7 +156,7 @@ body {
 
 .nav-bar-logo {
   width: 200px;
-  margin: 20px 20px;
+  margin: 20px 30px;
   display: flex;
   gap: 20px;
 }
@@ -90,6 +164,11 @@ body {
 .nav-bar-buttons {
   display: flex;
   gap: 5px;
+  margin: 0 30px 0 0;
+}
+
+.nav-bar-buttons p {
+  color: var(--color-main-brighter2);
 }
 
 .nav-bar-buttons button {
@@ -98,13 +177,13 @@ body {
   background-color: transparent;
   color: var(--color-main-brighter2);
   border: 0;
-  margin: 0 20px;
-  font-size: 14px;    
+  padding: 5px 5px;
+  font-size: 14px;
   /*font-weight: bold;*/
 }
 
 .nav-bar-buttons button:hover {
-  border: 0; 
+  border: 0;
   color: var(--color-sub1);
 }
 
@@ -138,4 +217,27 @@ body {
 .element-title {
   display: block;
   text-align: center;
+}
+
+
+/*pc*/
+@media (max-width: 992px) {}
+
+/*tablet*/
+@media (min-width: 768px) and (max-width: 991px) {}
+
+/*mobile*/
+@media (max-width: 767px) {
+  .text-and-image {
+    display: flex;
+    flex-direction: column;
+  }
+  .text-and-image img {
+    order: -1;
+    margin: 15px 0;
+  }
+  .content-box-1 h1{
+
+    font-size: 2em;
+  }
 }
