--- a/about/about.css
+++ b/about/about.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 
 
 :root {
   --main-font: 'IBM Plex Sans KR', sans-serif;
 
-  --width-max: 720px;
+  --width-max: 760px;
   /* Main Color */
   --color-main: #0f52ba;
 
@@ -54,20 +54,26 @@ body {
 .content {
   max-width: var(--width-max);
   margin: 0 auto;
-  padding: 5% 0;
-  z-index: 3;
+  padding: 50px 0;
   position: relative;
 }
 
 .page-wrap {
   position: relative;
   min-height: 100%;
-  padding: 130px 0 0 0;
+  margin: 0;
   box-sizing: border-box;
-  background-image: url(img/page-background.png);
-  background-repeat: no-repeat;
-  background-position: top center;
-  z-index: -1;
+}
+
+.content-background-filter {
+  width: 100%;
+  margin: 100px 0;
+  position: relative;
+  font-size: inherit;
+  background-color: rgba(255, 255, 255, 0.3);
+  /* 반투명 흰색 배경 */
+  backdrop-filter: blur(10px);
+  /* 블러 효과 */
 }
 
 .content-box-1,
@@ -75,36 +81,30 @@ body {
 .content-box-3,
 .content-box-4,
 .content-box-5 {
-  /* background-size: cover;*/
-  /* background-position: center;*/
   width: 100%;
-  margin: 100px 0;
-  position: relative;
-  z-index: 2;
-  font-size: inherit;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-position: center;
+  padding: 50px 0;
 }
 
-.content-box-1::before,
-.content-box-2::before,
-.content-box-3::before,
-.content-box-4::before,
-.content-box-5::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.3);
-  /* 반투명 흰색 배경 */
-  backdrop-filter: blur(10px);
-  /* 블러 효과 */
-  z-index: -1;
-}
-
+/* 
+ background: linear-gradient(45deg, rgba(var(--color-sub2-brighter1), 0.3), rgba(var(--color-sub1-brighter1),0.3));
+ */
 .content-box-1 {
-  background-color: #ffffff50;
+  background-image: url(img/bg-content-1.png);
   font-size: 1.5em;
+  padding: 120px 0 50px 0;
+} 
+
+.content-box-2 {
+  background-image: url(img/bg-content-2.jpg);
+  font-size: 1.5em;
+}
+
+
+.content-box-1 .content-background-filter {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -112,7 +112,7 @@ body {
 
 .text-and-image {
   display: flex;
-  align-items: center; 
+  align-items: center;
 }
 
 .text-and-image p {
@@ -126,7 +126,7 @@ body {
 }
 
 .content-box-1 h1 {
-  font-size: 60px;
+  font-size: 2.3em; 
   margin: 20px 0;
   text-align: center;
   text-decoration: double;
@@ -140,8 +140,7 @@ body {
     -1px 1px 0 var(--color-main-brighter),
     1px 1px 0 var(--color-main-brighter);
 }
-
-
+ 
 .nav-bar {
   border-radius: 20px;
   position: fixed;
@@ -152,6 +151,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 1;
 }
 
 .nav-bar-logo {
@@ -202,24 +202,47 @@ body {
   justify-content: center;
   flex-direction: row;
   width: 90%;
+  margin: 50px auto;
 }
 
 .element {
-  flex: 1 0 0;
+  flex: 1 0 0;  
   border: solid var(--color-gray-brighter2) 1px;
+  border-radius: 10px;
   margin: 10px;
+  background-color: #fff;
+  box-shadow: #00000020 5px 5px 0 0;
 }
 
 .element-body {
   display: block;
+  font-size:0.85em;
 }
 
 .element-title {
   display: block;
   text-align: center;
+  /*
+  border-radius: 20px;
+  background-color: rgba(var(--color-gray-brighter2), 0.5);
+  */
 }
 
-
+.element-title-imgbox{ 
+  width:160px;
+  height:160px;
+  border-radius: 80px;  
+  background-color: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.element-title-imgbox img{
+  display:flex;
+  left:50%;
+  top:50%;
+  object-fit: cover;
+  width: 100%;
+  height:100%;
+}
 /*pc*/
 @media (max-width: 992px) {}
 
@@ -232,11 +255,13 @@ body {
     display: flex;
     flex-direction: column;
   }
+
   .text-and-image img {
     order: -1;
     margin: 15px 0;
   }
-  .content-box-1 h1{
+
+  .content-box-1 h1 {
 
     font-size: 2em;
   }
