--- a/about/about.css
+++ b/about/about.css
@@ -152,14 +152,16 @@ body {
   color: var(--color-gray-brighter4);
 }
 
-.content-2 .content {
+.content-2 .content, 
+.content-3 .content{
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 
-.content-2 h2 {
+.content-2 h2,
+.content-3 h2 {
   color: var(--color-sub2-brighter1);
   font-size: 4em;
 }
@@ -170,12 +172,14 @@ body {
 }
 
 
-.content-2 .content .content-wrapper {
+.content-2 .content .content-wrapper,
+.content-3 .content .content-wrapper {
   flex: 4;
   max-width: 1000px;
 }
 
-.content-2 ol {
+.content-2 ol,
+.content-3 .content .image-wrapper {
 
   max-width: 800px;
   margin: 100px 0;
@@ -219,7 +223,8 @@ body {
   margin: 0 0 auto 15px;
 }
 
-.content-2 .content li .image-wrapper {
+.content-2 .content li .image-wrapper
+{
   flex: 2;
   height: 180px;
   width: 100%;
@@ -236,6 +241,16 @@ body {
 .content-2 li p {
   font-size: 1.2em;
 }
+
+ 
+
+.content-3 img {
+  height: 90%;
+  max-height: 90%;
+  margin: auto auto;
+}
+
+
 
 .nav-bar {
   position: fixed;
